ChangeLog
---------

2007 Mon Jan 05
---------------
	- Fix many errors in "install-new". It didn't found any
	  package with [A-Z] or [0-9] in his names.
	- Still in "install-new", now we can detect more new packages,
	  the awk script is a lot better now.
	- Correct the .tgz parsing in pkglist.awk, using \.tgz instead.
	- Newer (and i hope, good) man-pages.

2006 Wed Nov 08
---------------
	- Fixed the "upgrade" package parsing. It was going wrong
	  with nn and glib packages.
		(Reported by Ralph Alvy)
	- Fixed "reinstall" it was ignoring the blacklist and given
	  wrong packages to reinstall.
	- Now blacklist can handle directories beginning with a / and not
	  with ./ (very better, and this is the needed behavior).
	- Accept the list of packages from a file
		(e.g.: slackpkg upgrade /etc/slackpkg/files)
	  We accept relative (./something, ../something) and absolute 
	  paths (/something).
	- Release 2.51beta

2006 Sun Oct 29
---------------
	- Fixes to install/upgrade (it was broked when i change the
	  tmplist). Now it's OK
	- Fixes in remove and reinstall, they are showing duplicated
	  entries in the list. Now it's OK
	- Fix in download... it was total crazy! Now it's OK
	- Added install-new.awk and improve the ChangeLog.txt parser
	  now we don't have any package hardcoded.
	- Fix in upgrade-all to remove the unused variable NAME now we can use
	  the data in pkglist. 
	- Minor fix in clean-system.
	- Change the variable's scope to "local" in many functions

2006 Sat Oct 28
---------------
	- Change the tmplist format to be the same as pkglist
	- New functions to make the package list with that we now can:
		- Handle multiple files in the command line.
		  (e.g.: slackpkg upgrade kernel x11 lsof)
		- Use the package series as the pattern, without the
		  trailing / hack.
		  (e.g.: slackpkg remove a)
		- "download" don't use the blacklist. The user now can
		  download one blacklisted package.
	- Release slackpkg 2.5beta

2006 Fri Oct 27
---------------