@@ -17,7 +17,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-# Project Page: http://slackpkg.sf.net/
+# Project Page: http://slackpkg.org/
 # Roberto F. Batista (aka PiterPunk) piterpk@terra.com.br
 # Evaldo Gardenali (aka UdontKnow) evaldogardenali@fasternet.com.br
 #
